Wed Feb 13 07:25:14 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* NEWS, ROADMAP: Fixed nested alias.

	* src/log.c: Changed the includes a bit.

	* src/net.c (heck_aliases): Rewritten, now returns void
	(action_send_to_connection): Now uses a GString internally.

Tue Feb 12 07:51:34 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Added patch from Vashti which fixes blackbold bug.

	* AUTHORS: Added more information on Vashti
	* ROADMAP: Added new idea

	* src/gnome-mud.h (system_data): BoldForeGround added.
	* src/init.c (window_menu_help_about): Removed some contributers,
	although they still exist in AUTHORS.
	* src/prefs.c (load_prefs): Added BoldForeground.
	(prefs_color_frame): Likewise.
	* src/telnet.c (pre_process): Bug fix, overriting memory which
	would destroy buf and cd variable.
	* src/window.c (con_escm): Changed by Vashti (see patch above)

Mon Feb 11 14:50:34 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Forgot src/log.c.

Mon Feb 11 08:50:34 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Added new patch from Vashti
	lets you turn session recording (logging in real time) on and off
    from the file menu.

	* moves the existing logging code into the same file as the new code,
	and renames the option on the menu so as to avoid confusion.

	* adds a new message type to textfield_add (MESSAGE_SYSTEM)
	which is used for non-error system messages.

	* prettifies a few places where strerror(errno) was printed to
	the window.

	* explicitly closes all open connections and logfiles on
	program exit.

Mon Feb 11 08:34:56 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c (pre_process): Fixed formatting of source to be more
	readable.

Thu Feb  7 04:00:27 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* doc/C/gnome-mud.sgml: fixes and additions for 0.9.0 features.
	Python docs still not merged, though.

Wed Feb  6 23:57:20 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* doc/C/main-window.png: moved to figures/.